--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
@@ -179,3 +178,4 @@ cython_debug/
 .cursorignore
 .cursorindexingignore
 /.vscode
+restshutdown.log
